--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,17 @@
-[*.{js,jsx,ts,tsx,vue}]
+[*]
+charset = utf-8
 indent_style = space
+
+[{*.md,*.txt}]
+indent_size = 4
+max_line_length = off
+trim_trailing_whitespace = false
+insert_final_newline = false
+
+[*.{js,jsx,ts,tsx,vue}]
 indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[Makefile]
+indent_style = tab
