--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.1",
     "bulma": "^0.8.0",
     "core-js": "^3.4.4",
+    "lodash-es": "^4.17.15",
     "register-service-worker": "^1.6.2",
+    "slug": "^2.1.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
