--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "yarn extract && vue-cli-service serve",
-    "build": "yarn extract && vue-cli-service build",
+    "build": "yarn extract && vue-cli-service build --modern",
     "extract": "node scripts/generate-companies",
     "lint": "vue-cli-service lint"
   },
@@ -17,7 +17,7 @@
     "p-map": "^3.0.0",
     "p-waterfall": "^2.1.0",
     "register-service-worker": "^1.6.2",
-    "slug": "^2.1.0",
+    "slugify": "^1.3.6",
     "vue": "^2.6.10"
   },
   "devDependencies": {
