--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
     "hast-util-select": "^3.0.1",
-    "html-critical-webpack-plugin": "^2.1.0",
     "lodash": "^4.17.15",
     "mdast-util-compact": "^2.0.0",
     "mdast-util-to-hast": "^7.0.0",
@@ -44,6 +43,7 @@
     "sass-loader": "^8.0.0",
     "to-vfile": "^6.0.0",
     "unified": "^8.4.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-inline-modern-source-plugin": "^0.1.4"
   }
 }
