--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "yarn extract && vue-cli-service serve",
     "build": "yarn extract && vue-cli-service build --modern",
-    "extract": "node scripts/generate-companies",
+    "extract": "node scripts/generate-companies/index.mjs",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -31,17 +31,17 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-vue": "^8.1.1",
-    "hast-util-select": "^4.0.0",
+    "hast-util-select": "^5.0.1",
     "lodash": "^4.17.21",
-    "mdast-util-compact": "^2.0.1",
-    "mdast-util-to-hast": "^9.1.2",
+    "mdast-util-compact": "^4.1.0",
+    "mdast-util-to-hast": "^12.0.0",
     "node-sass": "^6.0.1",
-    "ora": "^5.1.0",
+    "ora": "^6.0.1",
     "pretty-bytes": "^5.6.0",
-    "remark-parse": "^8.0.3",
+    "remark-parse": "^10.0.1",
     "sass-loader": "^10",
-    "to-vfile": "^6.1.0",
-    "unified": "^9.2.0",
+    "to-vfile": "^7.2.2",
+    "unified": "^10.1.1",
     "vue-template-compiler": "^2.6.12",
     "webpack-inline-modern-source-plugin": "^0.1.4"
   }
